--- a/play_song/templates/play_song.html
+++ b/play_song/templates/play_song.html
@@ -10,9 +10,9 @@
 <br>
 
 <div class="bg-gradient-to-bl from-green-400 to-blue-600 min-h-screen flex justify-center items-center py-20">
-    <div class="w-full max-w-4xl bg-gray-900 rounded-lg shadow-lg p-12 mx-auto">
-        <h1 class="text-5xl text-yellow-400 font-bold text-center mb-12">Detail Lengkap Lagu</h1>
-        <div class="flex flex-col md:flex-row md:space-x-12 text-yellow-300">
+    <div class="w-full max-w-4xl bg-gray-800 rounded-lg shadow-lg p-12 mx-auto">
+        <h1 class="text-5xl text-white font-bold text-center mb-12">Detail Lengkap Lagu</h1>
+        <div class="flex flex-col md:flex-row md:space-x-12 text-white">
             <div class="md:w-1/2">
                 <p class="mb-4"><strong>Judul:</strong> {{ song_title }}</p>
                 <p class="mb-4"><strong>Genre:</strong> 
@@ -37,9 +37,9 @@
             </div>
         </div>
         <div class="mt-10">
-            <label for="progressSlider" class="block text-yellow-300 mb-4">Kemajuan Lagu:</label>
+            <label for="progressSlider" class="block text-white mb-4">Kemajuan Lagu:</label>
             <input type="range" id="progressSlider" name="songProgress" min="0" max="100" value="0" class="w-full mb-2" onchange="updateSliderValue(this.value)">
-            <span id="sliderValue" class="block text-center text-yellow-300 text-lg">0%</span>
+            <span id="sliderValue" class="block text-center text-white text-lg">0%</span>
         </div>
         <form method="POST" class="mt-6">
             {% csrf_token %}
