--- a/user_playlist/templates/tambah_lagu.html
+++ b/user_playlist/templates/tambah_lagu.html
@@ -9,7 +9,7 @@
 <div class="bg-gradient-to-bl from-green-500 to-blue-500 min-h-screen flex items-center justify-center py-20">
     <div class="w-full max-w-2xl bg-gray-800 rounded-3xl shadow-xl p-10">
         <h2 class="text-5xl text-yellow-400 font-bold text-center mb-10">Tambah Lagu ke Playlist</h2>
-        <form method="post" action="{% url 'user_playlist:tambah_lagu' id_user_playlist %}" class="space-y-8">
+        <form method="post" action="{% url 'user_playlist:tambah_lagu_playlist' id_user_playlist %}" class="space-y-8">
             {% csrf_token %}
             <div>
                 <label for="songDropdown" class="block text-yellow-300 text-lg mb-4">Pilih Lagu:</label>
